# FederatedLearning

./: pyproject.toml
etc/: class_utils.py  code_horizontal.ipynb  data_utils.py  flower_xgb_exploration.py  utils.py
src/: main.py  run.sh  utils.py
