[tool.poetry]
name = "federatedlearning"
version = "0.1.0"
description = "A package exploring the world of federated learning. No real objjective is set except maximizing the knowledge gained."
authors = ["William Lindskog"]
license = "CC BY 1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
